# cat-herder

./: .gitignore  CHANGELOG.md  README.md  TODO  cabal.project  cat-herder.cabal  flake.nix  justfile
dev/: cabal-gen-docs.sh  haddock-open.sh
graphs/: ex0.dot  ex1.dot  ex2.dot  unsized-alsoOne-TB1.dot  unsized-alsoOne.dot  unsized-alsoOneIsOne.dot  unsized-oneIsOne.dot
src/: Cat.hs
src/Cat/: GraphViz.hs  Operators.hs  Orthotope.hs  Sized.hs  Unsized.hs  VectorSized.hs
src/Cat/Orthotope/: Extras.hs
src/Cat/Sized/: Bikleisli.hs  Bimonoidal.hs  Braided.hs  Cartesian.hs  Category.hs  Cocartesian.hs  Codiagonal.hs  Comonad.hs  Diagonal.hs  Distributive.hs  Functor.hs  Monad.hs  Monoidal.hs  Profunctor.hs  Semiadditive.hs  Semicartesian.hs  Semicocartesian.hs  Semigroupoid.hs  Zero.hs
src/Cat/Sized/Bimonoidal/: Class.hs  Instances.hs
src/Cat/Sized/Braided/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Braided/Free/: Data.hs  Instances.hs
src/Cat/Sized/Cartesian/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Cartesian/Free/: Data.hs  Instances.hs
src/Cat/Sized/Category/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Category/Free/: Data.hs  Instances.hs  TTG.hs
src/Cat/Sized/Cocartesian/: Class.hs  Instances.hs
src/Cat/Sized/Codiagonal/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Diagonal/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Distributive/: Class.hs  Instances.hs
src/Cat/Sized/Examples/: Arith.hs  Circuit.hs
src/Cat/Sized/Functor/: Monoidal.hs
src/Cat/Sized/Monoidal/: Class.hs  Data.hs  Free.hs  Instances.hs
src/Cat/Sized/Monoidal/Free/: Data.hs  Instances.hs
src/Cat/Sized/Semiadditive/: Class.hs  Instances.hs
src/Cat/Sized/Semicartesian/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Semicocartesian/: Class.hs  Free.hs  Instances.hs
src/Cat/Sized/Semigroupoid/: Class.hs  Free.hs  Instances.hs  Internal.hs
src/Cat/Sized/Semigroupoid/Free/: Data.hs  Instances.hs
src/Cat/Sized/Zero/: Class.hs  Instances.hs
src/Cat/Unsized/: Bikleisli.hs  Category.hs  Comonad.hs  Functor.hs  GraphViz.hs  Monad.hs  Profunctor.hs  Semigroupoid.hs
src/Cat/Unsized/Category/: Class.hs  Free.hs  Instances.hs
src/Cat/Unsized/Category/Free/: Data.hs  Instances.hs  TTG.hs
src/Cat/Unsized/Examples/: Arith.hs
src/Cat/Unsized/Semigroupoid/: Class.hs  Free.hs  Instances.hs
src/Cat/Unsized/Semigroupoid/Free/: Data.hs  Instances.hs
